# livecodebench_pro_exp

./: .gitignore  .gitmodules  README.md  api_interface.py  benchmark.py  judge.py  models.yaml  pyproject.toml  statistics_by_difficulty.py
result/glm-4.7/: 20260119_150719.json
